--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,7 @@
 <Project>
 
   <PropertyGroup>
-    <Version>1.0.0-alpha.4</Version>
+    <Version>1.0.0</Version>
     <LangVersion>latest</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <Deterministic>true</Deterministic>
@@ -9,13 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Sentry" Version="3.0.0-beta.0" />
+	<PackageReference Include="Sentry" Version="3.0.0" />
     <PackageReference Include="Roslynator.Analyzers" Version="3.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.CodeAnalysis.BannedApiAnalyzers" Version="3.3.1" PrivateAssets="All" />
 
-<!-- Add on future version -->
-<!-- <PackageReference Include="Nullable" Version="1.3.0" PrivateAssets="All" /> -->
   </ItemGroup>
-
 </Project>
