--- a/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS.csproj
+++ b/Samples/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS/Sentry.Xamarin.tvOS.csproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Info.plist" />
@@ -151,6 +152,7 @@
     <Compile Include="ViewController.designer.cs">
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Services\AuthService.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Main.storyboard" />
